<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_Calculadora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:text="@string/calculadora_simple" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_Numero1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/numero_1" />

        <EditText
            android:id="@+id/et_Numero1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:singleLine="false"
            tools:text="Numero 1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_Numero2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/numero_2" />

        <EditText
            android:id="@+id/et_Numero2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            tools:text="Numero 2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/bt_Suma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/suma" />

            <Button
                android:id="@+id/bt_Resta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resta" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/bt_Division"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/division" />

            <Button
                android:id="@+id/bt_Multiplicacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/multiplicacion" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_Limpiar"
            android:layout_width="0dp"
            android:layout_height="96dp"
            android:layout_weight="1"
            android:text="@string/limpiar" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_Intercambiar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/intercambiar"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/bt_Salir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/salir"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_Resultado"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/resultado" />

</LinearLayout>